--- a/GiamKichSan/TraCuu.GiamKichSan/Pages/Index.cshtml
+++ b/GiamKichSan/TraCuu.GiamKichSan/Pages/Index.cshtml
@@ -17,16 +17,16 @@
     <table class="table table-striped table-bordered table-hover table-condensed">
         <thead>
             <tr style="background-color: #104e8b; color: #e49b0f; text-align:center">
-                <th>STT</th>
-                <th>Ảnh</th>
-                <th>Bí danh</th>
-                <th>Tên đầy đủ</th>
-                <th>Ngày sinh</th>
-                <th>Nơi sinh</th>
-                <th>Facebook</th>
-                <th>Youtube</th>
-                <th>Tiktok</th>
-                <th>Wikipedia</th>
+                <th style="width:50px">STT</th>
+                <th style="width:50px">Ảnh</th>
+                <th style="width:100px">Bí danh</th>
+                <th style="width:150px">Tên đầy đủ</th>
+                <th style="width:70px">Ngày sinh</th>
+                <th style="width:200px">Nơi sinh</th>
+                <th style="width:70px">Facebook</th>
+                <th style="width:70px">Youtube</th>
+                <th style="width:70px">Tiktok</th>
+                <th style="width:70px">Wikipedia</th>
             </tr>
         </thead>
         <tbody>
@@ -37,7 +37,7 @@
                     @{ index++;}
                     <td>@index</td>
                     <td>
-                        <img src="@item.Image" width="50px" height="50px" />
+                        <img src="@item.Image" style="width:100%; height:100%; padding:0; margin:0;" />
                     </td>
                     <td>@item.Alias</td>
                     <td>@item.Name</td>
