--- a/GiamKichSan/Blog.GiamKichSan/Pages/Shared/_Layout.cshtml
+++ b/GiamKichSan/Blog.GiamKichSan/Pages/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Category/Update">Tạo bài viết</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Posts/Update">Tạo bài viết</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Category/Index">Danh mục</a>
