--- a/GiamKichSan/Blog.GiamKichSan/Pages/Category/Update.cshtml
+++ b/GiamKichSan/Blog.GiamKichSan/Pages/Category/Update.cshtml
@@ -12,16 +12,23 @@
                 <div class="form-group">
                     <label for="alias">Cấp cha:</label>
                     <select name="idParent" class="form-control">
-                        <option value="">-- Chọn --</option>
+                        <option value="0">-- Chọn --</option>
                         @foreach (var item in Model.parentcategoryEntity)
                         {
-                            <option value="@item.ID">@item.Name</option>
+                            if (item.ID != Model.categoryEntity.IDParent)
+                            {
+                                <option value="@item.ID">@item.Name</option>
+                            }
+                            else
+                            {
+                                <option selected value="@item.ID">@item.Name</option>
+                            }
                         }
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="name">Họ và Tên:</label><span class="text-danger">*</span>
-                    <input type="text" class="form-control" name="name" value="@Model.categoryEntity.Name" maxlength="200" required>
+                    <label for="name">Tên danh mục:</label><span class="text-danger">*</span>
+                    <input type="text" class="form-control" name="name" value="@Model.categoryEntity.Name" maxlength="500" autocomplete="off" required>
                 </div>
             </div>
             <div class="panel-footer">
