--- a/GiamKichSan/Blog.GiamKichSan/Pages/Posts/Update.cshtml
+++ b/GiamKichSan/Blog.GiamKichSan/Pages/Posts/Update.cshtml
@@ -1,4 +1,84 @@
 ﻿@page
 @model Blog.GiamKichSan.Pages.Posts.UpdateModel
-@{
+<div class="container">
+    <h2>@ViewData["Title"] - Bài viết</h2>
+    <div class="panel-group">
+        <form class="panel panel-default" enctype="multipart/form-data" method="post">
+            <div class="panel-body">
+                <div class="form-group">
+                    <label for="IDCategory">
+                        Danh mục:<span class="text-danger">*</span>
+                    </label>
+                    <select name="IDCategory" class="form-control" required>
+                        <option value="0">-- Chọn --</option>
+                        @foreach (var item in Model.categoriesEntity)
+                        {
+                            if (item.ID != Model.postModel.IDCategory)
+                            {
+                                <option value="@item.ID">@item.Name</option>
+                            }
+                            else
+                            {
+                                <option selected value="@item.ID">@item.Name</option>
+                            }
+                        }
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="IDTag">Tag:</label>
+                    <input type="text" class="form-control" name="IDTag" value="@Model.postModel.IDTag">
+                </div>
+                <div class="form-group">
+                    <label for="name">Nội dung:</label>
+                    <div class="toolbar-container"></div>
+                    <div id="PostDetailName" name="PostDetailName">
+                        <p><i>Nhập nội dung ở đây</i></p>
+                        @foreach (var postDetail in Model.postModel.PostDetails)
+                        {
+                            @Html.Raw(System.Net.WebUtility.HtmlDecode(postDetail.Description))
+                        }
+                    </div>
+                </div>
+            </div>
+            <div class="panel-footer">
+                <input type="hidden" class="form-control" name="ID" value="@Model.postModel.ID">
+                <button type="submit" class="btn btn-primary mb-2">Submit</button>
+            </div>
+        </form>
+    </div>
+</div>
+@section Scripts{
+    <script>
+        DecoupledEditor
+            .create(document.querySelector('#PostDetailName'), {
+                // toolbar: [ 'heading', '|', 'bold', 'italic', 'link' ]
+            })
+            .then(editor => {
+                const toolbarContainer = document.querySelector('main .toolbar-container');
+                toolbarContainer.prepend(editor.ui.view.toolbar.element);
+                window.editor = editor;
+                this.focus();
+            })
+            .catch(err => {
+                console.error(err.stack);
+            });
+
+        //$('button[type=submit]').click(function (evt) {
+        //    evt.preventDefault();
+        //    let $this = $(this);
+        //    let data = {
+        //        "IDCategory": $("select[name=IDCategory]")[0].value,
+        //        "IDTag": $("input[name=IDTag]")[0].value,
+        //        "PostDetails": $("div[name=PostDetails]").children().map(function (index, item) {
+        //            return { "description": item.innerHTML };
+        //        })
+        //    };
+        //    $.ajax({
+        //        url: location.href,
+        //        type: 'POST',
+        //        data: data,
+        //        contentType: 'application/json',
+        //    });
+        //});
+    </script>
 }
