--- a/GiamKichSan/Blog.GiamKichSan/Pages/Posts/Index.cshtml
+++ b/GiamKichSan/Blog.GiamKichSan/Pages/Posts/Index.cshtml
@@ -1,4 +1,45 @@
 ﻿@page
 @model Blog.GiamKichSan.Pages.Posts.IndexModel
-@{
-}
+<form class="panel panel-primary" method="get">
+    <div class="panel-heading"></div>
+    <div class="panel-body">
+        <div class="row form-group">
+            <div class="col-md-6 col-sm-6">
+                <input type="tel" class="form-control" name="term" value="" placeholder="Tra cứu">
+            </div>
+            <div class="col-md-2 col-sm-3">
+                <button type="submit" class="btn btn-primary mb-2">Tìm kiếm</button>
+            </div>
+            <div class="col-md-2 col-sm-3">
+                <a href="/Category/Update" class="btn btn-info mb-2">Thêm mới</a>
+            </div>
+        </div>
+    </div>
+</form>
+<div class="table-responsive">
+    <table class="table table-striped table-bordered table-hover table-condensed">
+        <thead>
+            <tr style="background-color: #104e8b; color: #e49b0f; text-align:center">
+                <th style="width:50px">STT</th>
+                <th style="width:50px">Danh mục</th>
+                <th style="width:500px">Tên bài viết</th>
+                <th style="width:100px"></th>
+            </tr>
+        </thead>
+        <tbody>
+            @{ var index = 0;}
+            @foreach (var item in Model.postsModel)
+            {
+                <tr>
+                    @{ index++;}
+                    <td>@index</td>
+                    <td>@item.CategoryName</td>
+                    <td>@item.Title</td>
+                    <td>
+                        <a href="\Posts\View?ID=@item.ID">Xem</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
