--- a/GiamKichSan/Blog.GiamKichSan/Pages/Shared/_Layout.cshtml
+++ b/GiamKichSan/Blog.GiamKichSan/Pages/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Blog.GiamKichSan - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - Blog.GiamKichSan
         </div>
     </footer>
 
