--- a/GiamKichSan/Blog.GiamKichSan/Pages/Posts/Index.cshtml
+++ b/GiamKichSan/Blog.GiamKichSan/Pages/Posts/Index.cshtml
@@ -37,6 +37,7 @@
                     <td>@item.Title</td>
                     <td>
                         <a href="\Posts\View?ID=@item.ID">Xem</a>
+                        <a href="\Posts\Update?ID=@item.ID">Sửa</a>
                     </td>
                 </tr>
             }
